--- a/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
@@ -14,6 +14,7 @@
             <tr>
                 <td><p>Type</p></td>
                 <td><input type="text" name="Type" /></td>
+                
             </tr>
             <tr>
                 <td><p>City</p></td>
@@ -25,11 +26,11 @@
             </tr>
             <tr>
                 <td><p>Opens at</p></td>
-                <td><input type="text" name="WorkTimeStart" /></td>
+                <td><input type="time" name="WorkTimeStart" /></td>
             </tr>
             <tr>
                 <td><p>Closes at</p></td>
-                <td><input type="text" name="WorkTimeFinish" /></td>
+                <td><input type="time" name="WorkTimeFinish" /></td>
             </tr>
             <tr>
             <tr>
@@ -75,9 +76,9 @@
 
 
 <div>
-
+    <div id="map"></div>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&language=ua&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap">
     </script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript">
@@ -87,7 +88,7 @@
             var myLatlng = new google.maps.LatLng(49.8382600, 24.0232400);
 
             var myOptions = {
-                zoom: 13,
+                zoom: 15,
                 center: myLatlng,
                 mapTypeId: google.maps.MapTypeId.ROADMAP
             };
@@ -115,7 +116,7 @@
             google.maps.event.addListener(map, 'click', function (event) {
                 document.getElementById("lat").value = event.latLng.lat();
                 document.getElementById("long").value = event.latLng.lng();
-                //document.getElementById("coord").value = event.latLng;
+                document.getElementById("coord").value = event.latLng;
                 marker.setPosition(event.latLng);
                 
             });
