--- a/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AddPlace/AddingNewPlaceFromUser.cshtml
@@ -72,19 +72,12 @@
     }
 </style>
 
-<div id="map_canvas" style="width: 1000px; height: 500px;"></div>
+<div id="map_canvas" ></div>
 
-
-<div>
-    <div id="map"></div>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap">
-    </script>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript">
         var map;
 
-        function initialize() {
+        function initMap() {
             var myLatlng = new google.maps.LatLng(49.8382600, 24.0232400);
 
             var myOptions = {
@@ -118,12 +111,12 @@
                 document.getElementById("long").value = event.latLng.lng();
                 document.getElementById("coord").value = event.latLng;
                 marker.setPosition(event.latLng);
-                
-            });
-            
 
+            });
         }
-        
-        google.maps.event.addDomListener(window, "load", initialize());
     </script>
-</div>
+
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap">
+    </script>
+
