--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/SelectPlaces.cshtml
@@ -174,15 +174,11 @@
     }
 </style>
 
-<div id="map_canvas" style="width: 1000px; height: 500px;"></div>
+<div id="map_canvas"></div>
 
 
 <div>
-    <div id="map"></div>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initMap">
-    </script>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
     <script type="text/javascript">
         var map;
 
@@ -201,6 +197,9 @@
         }
 
         google.maps.event.addDomListener(window, "load", initialize());
+    </script>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7tnGRfh4zut21AaOKJpBEGIh7UXJobVM&callback=initialize">
     </script>
 </div>
 
@@ -236,6 +235,7 @@
            if (i < checkedB.length - 1) {
                chB += '*';
            }
+           
          }
         var r = { ids : chB };
         Create(r);
