--- a/TouristGreenbook/TGB.WebAPI/Views/Trips/Edit.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/Trips/Edit.cshtml
@@ -54,44 +54,55 @@
             </form>
         </div>
         <div class="col-sm-9">
-            <table id="table_places" class="table table-striped table-hover table-condensed">
-                <thead>
+            <h2>Google maps here</h2>
+
+        </div>
+    </div>
+    
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
+    
+    <div class="row">
+        <h4>Current places</h4>
+        <table id="table_places" class="table table-striped table-hover table-condensed">
+            <thead>
                 <tr>
                     <th>
 
                     </th>
-                    <th onclick="sortTable(0)">
+                    <th onclick="sortTable(1, 'table_places')">
                         @Html.DisplayNameFor(model => model.Places[0].Name)
                     </th>
-                    <th onclick="sortTable(1)">
+                    <th onclick="sortTable(2, 'table_places')">
                         @Html.DisplayNameFor(model => model.Places[0].Address)
                     </th>
-                    <th onclick="sortTable(2)">
+                    <th onclick="sortTable(3, 'table_places')">
                         @Html.DisplayNameFor(model => model.Places[0].Type)
                     </th>
-                    <th onclick="sortTable(3)">
+                    <th onclick="sortTable(4, 'table_places')">
                         @Html.DisplayNameFor(model => model.Places[0].WorkTimeStart)
                     </th>
-                    <th onclick="sortTable(4)">
+                    <th onclick="sortTable(5, 'table_places')">
                         @Html.DisplayNameFor(model => model.Places[0].WorkTimeFinish)
                     </th>
-                    <th onclick="sortTable(5)">
+                    <th onclick="sortTable(6, 'table_places')">
                         @Html.DisplayNameFor(model => model.Places[0].Rating)
                     </th>
-                    <th onclick="sortTable(6)">
+                    <th onclick="sortTable(7, 'table_places')">
                         @Html.DisplayNameFor(model => model.Places[0].Description)
                     </th>
-                    
+
                 </tr>
-                </thead>
-                <tbody>
+            </thead>
+            <tbody>
                 @{
                     var places = Model.Places.Where(pl => pl.Trip != null && pl.Trip.Id == Model.Trips[0].Id).ToList();
                     foreach (var place in places)
                     {
                         <tr>
                             <td>
-                                <input type="checkbox" name="@place.Id" onclick="changePlaceState(this)" />
+                                <input type="checkbox" name="@place.Id" checked="checked" onclick="changePlaceState(this)" />
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => place.Name)
@@ -115,20 +126,12 @@
                                 @Html.DisplayFor(modelItem => place.Description)
                             </td>
                         </tr>
-                    
-                    
-                    @*<p>@place.Name, @place.Address, @place.Type</p>*@
+
+
+                        @*<p>@place.Name, @place.Address, @place.Type</p>*@
                     }
                 }
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="row">
-        <table class="table table-striped table-hover table-condensed">
-            <thead>
-
-            </thead>
+            </tbody>
         </table>
     </div>
 
@@ -138,9 +141,9 @@
     </div>
 
     <script>
-        function sortTable(n) {
+        function sortTable(n, tableName) {
             var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-            table = document.getElementById("table_places");
+            table = document.getElementById(tableName); //"table_places"
             switching = true;
             // Set the sorting direction to ascending:
             dir = "asc";
