--- a/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Index.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Views/AdminPlaces/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-area="" asp-controller="AddPlace" asp-action="AddingNewPlaceFromUser">Create new</a>
 </p>
 <table class="table">
     <thead>
