add link to return back

--- a/TouristGreenbook/TGB.WebAPI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/TouristGreenbook/TGB.WebAPI/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -16,6 +16,15 @@
         </div>
     </div>
 </div>
+@if (User.Identity.IsAuthenticated)
+{
+    if (User.IsInRole("Admin"))
+    {
+        <div>
+            <a asp-controller="Home" asp-action="AdminView">Back to List</a>
+        </div>
+    }
+}
 
 @section Scripts {
     @RenderSection("Scripts", required: false)
